--- a/lib/digistab_store_web/components/layouts/app.html.heex
+++ b/lib/digistab_store_web/components/layouts/app.html.heex
@@ -1,6 +1,6 @@
-<.navbar categories={[1, 2, 3, 4, 5]} />
+<.navbar categories={DigistabStore.Store.list_categories()} />
 <main class="px-4 py-20 sm:px-6 lg:px-8">
-  <div class="mx-auto max-w-2xl">
+  <div class="mx-auto max-w-2/3">
     <.flash_group flash={@flash} />
     <%= @inner_content %>
   </div>
