--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,6 +2,7 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-@import "../../../node_modules/trix/dist/trix.css";
+
+@import "../../assets/node_modules/trix/dist/trix.css";
 
 /* This file is for your main application CSS */
