--- a/lib/digistab_store_web/live/products/show.html.heex
+++ b/lib/digistab_store_web/live/products/show.html.heex
@@ -2,26 +2,32 @@
   <div class="bg-white rounded-lg shadow-lg overflow-hidden pb-4">
     <div class="md:flex">
       <!-- Galeria de Imagens -->
-      <div class="md:w-1/2 flex flex-row">
-        <div class="flex gap-2 px-2 w-32 overflow-x-auto">
-          <%= for photo <- @product.photos do %>
-            <div class="w-20 h-20 flex-shrink-0 rounded-lg overflow-hidden border-2 border-violet-500">
+      <div class="md:w-1/2 flex flex-row flex-grow">
+        <div class="flex flex-col gap-2 mx-2 w-24 overflow-x-auto">
+          <%= for {photo, index} <- Enum.with_index(@product.photos) do %>
+            <div
+              class="w-20 h-20 mx-auto flex-shrink-0 rounded-lg cursor-pointer overflow-hidden border-2 border-violet-500"
+              phx-click="change-photo"
+              phx-value-position={index}
+            >
               <img src={photo.url} alt={photo.description} class="w-full h-full object-cover" />
             </div>
           <% end %>
         </div>
-        <div class="relative h-96">
-          <%= if Enum.any?(@product.photos) do %>
-            <img
-              src={List.first(@product.photos).url}
-              alt={@product.name}
-              class="w-full h-full object-cover rounded-lg"
-            />
-          <% else %>
-            <div class="w-full h-full bg-gray-200 flex items-center justify-center">
-              <p class="text-gray-500">No image available</p>
-            </div>
-          <% end %>
+        <div class="relative w-full">
+          <div class="mx-auto h-96">
+            <%= if Enum.any?(@product.photos) do %>
+              <img
+                src={@current_photo.url}
+                alt={@current_photo.description}
+                class="w-full h-full object-cover rounded-lg"
+              />
+            <% else %>
+              <div class="w-full h-full bg-gray-200 flex items-center justify-center">
+                <p class="text-gray-500">No image available</p>
+              </div>
+            <% end %>
+          </div>
         </div>
       </div>
       <!-- Informações do Produto -->
