chore: minor fixes and fix route

--- a/lib/digistab_store_web/components/layouts/app.html.heex
+++ b/lib/digistab_store_web/components/layouts/app.html.heex
@@ -1,5 +1,5 @@
 <.navbar categories={DigistabStore.Store.list_categories()} />
-<main class="px-4 py-20 sm:px-6 lg:px-8">
+<main class="px-4 py-20 mb-20 sm:px-6 lg:px-8">
   <div class="mx-auto max-w-2/3">
     <.flash_group flash={@flash} />
     <%= @inner_content %>
