--- a/lib/digistab_store_web/live/products/index.html.heex
+++ b/lib/digistab_store_web/live/products/index.html.heex
@@ -1,6 +1,9 @@
 <div class="flex flex-col mt-8">
   <div name="search bar" class="flex w-2/3 mx-auto flex-row px-4">
-    <div class="w-full flex flex-row items-center justify-between ">
+    <div
+      :if={@current_action == :index}
+      class="w-full flex flex-row items-center justify-between "
+    >
       <.link patch={~p"/products/new"}>
         <.button class="bg-zinc-900 hover:bg-zinc-700 mt-2">New Product</.button>
       </.link>
@@ -33,16 +36,19 @@
   <div class="md:mx-auto w-full lg:w-2/3 responsive-box ">
     <div class="container mx-auto px-4">
       <!-- Featured Products -->
-      <section :if={Enum.count(@featured_products) > 0} class="mb-12 bg-violet-50 shadow-sm p-4">
+      <section
+        :if={Enum.count(@featured_products) > 0 and !@loading}
+        class="mb-12 bg-violet-50 shadow-sm p-4"
+      >
         <h2 class="text-xl font-bold mb-6 text-center">DESTAQUES</h2>
         <.featured_carousel featured_products={@featured_products} />
       </section>
       <!-- Other Products -->
       <section
-        :if={Enum.count(@streams.products) > 0}
+        :if={Enum.count(@streams.products) > 0 and !@loading}
         class="mb-12 bg-violet-50 shadow-sm p-4 rounded-md"
       >
-        <h2 class="text-xl font-bold mb-6">Outros produtos</h2>
+        <h2 class="text-xl font-bold mb-6"><%= @default_section_name %></h2>
 
         <div class="container mx-auto px-4">
           <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
