fixes: texts to english reduce timer to load products deactivate buttons for inaccessible functionalities

--- a/lib/digistab_store_web/live/products/index.html.heex
+++ b/lib/digistab_store_web/live/products/index.html.heex
@@ -40,7 +40,7 @@
         :if={Enum.count(@featured_products) > 0 and !@loading}
         class="mb-12 bg-violet-50 shadow-sm p-4"
       >
-        <h2 class="text-xl font-bold mb-6 text-center">DESTAQUES</h2>
+        <h2 class="text-xl font-bold mb-6 text-center">FEATURED</h2>
         <.featured_carousel featured_products={@featured_products} />
       </section>
       <!-- Other Products -->
