--- a/lib/digistab_store_web/live/products/index.html.heex
+++ b/lib/digistab_store_web/live/products/index.html.heex
@@ -20,7 +20,7 @@
           placeholder="search..."
           value={@query}
           class="w-full px-4 py-3 bg-white rounded-lg border border-gray-300 shadow-sm focus:outline-none focus:border-violet-500 focus:ring-1 focus:ring-violet-500 text-gray-600 text-lg"
-          phx-debounce="300"
+          phx-debounce="500"
           autocomplete="off"
           readonly={@loading}
         />
@@ -51,8 +51,14 @@
         <h2 class="text-xl font-bold mb-6"><%= @default_section_name %></h2>
 
         <div class="container mx-auto px-4">
-          <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
-            <.product_card :for={{_dom_id, product} <- @streams.products} product={product} />
+          <div
+            id="products-stream"
+            phx-update="stream"
+            class="grid grid-cols-1 md:grid-cols-3 gap-6 contain-layout-paint"
+          >
+            <div :for={{dom_id, product} <- @streams.products}>
+              <.product_card product={product} />
+            </div>
           </div>
         </div>
       </section>
